Bug 447967 - Nearly impossible to rotate canvas to most used angles (e.g. 0, 90 degrees) on Android
Summary: Nearly impossible to rotate canvas to most used angles (e.g. 0, 90 degrees) o...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 5.0.0
Platform: Android Android 11.x
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-05 10:57 UTC by ntu4ka
Modified: 2022-03-17 14:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ntu4ka 2022-01-05 10:57:31 UTC
It's nearly impossible to position canvas 0° after you rotated it with finger gestures.
It would be very helpful to have locking at 0° and 90°. As an alternative every 45 degrees would be more useful.

How locking from user point of view can work:
1. When you pressed 2 fingers and started rotating - position locks at closest value (e.g. 0°) after you passed it by a few degrees (e.g. after 2°).
E.g. you start at -2° and rotate clockwise.
-2°: rotation
-1°: rotation
0°: no rotation - lock, no rotation happens even if you move your fingers in any direction
1° (or -1°): no rotation
2° (or -2°): no rotation
3° (or -3°): rotation is enabled again

2. To release lock (e.g. fine-tune between 0° and 2°) you first need to go beyond threshold and after return back.
E.g. you start at -2° and rotate clockwise first and counterclockwise after to fine tune the angle.
-2°: rotation
-1°: rotation
0°: no rotation - lock
1°: no rotation
2°: no rotation
3°: rotation is enabled again
2°: rotation (moving back in opposite direction to fine tune the angle)

STEPS TO REPRODUCE
1. Slightly rotate canvas with 2 fingers (e.g. by 5°)
2. Try positioning it back to 0°

OBSERVED RESULT
You will end up with 0.2° or -0.1° or any other angle but not straight.

EXPECTED RESULT
To be snapped on specific angles (0°, 45°, 90°, 135°)

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 ntu4ka 2022-03-08 20:26:15 UTC
Just want to add.
I found a round rotation button at the bottom  that helps with the issue.
Still it's not intuitive for tablet usage where you are frequently using finger gestures (two finger rotation).
Comment 2 Bug Janitor Service 2022-03-10 14:45:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1371
Comment 3 Halla Rempt 2022-03-17 14:28:52 UTC
Git commit 3f15dd530fdb77d736e91b2d05d7f09df02099f0 by Halla Rempt, on behalf of Sharaf Zaman.
Committed on 17/03/2022 at 13:35.
Pushed by szaman into branch 'master'.

Touch Rotation: Add snapping at angles that are multiple of 45

M  +16   -0    libs/ui/input/kis_zoom_and_rotate_action.cpp

https://invent.kde.org/graphics/krita/commit/3f15dd530fdb77d736e91b2d05d7f09df02099f0