Touch Rotation: Add snapping at angles that are multiple of 45

BUG:447967